--- a/styles.css
+++ b/styles.css
@@ -1,51 +1,61 @@
-/* * {
-	border: 1px dashed red;
-	min-height: 10px;
+body {
+   background: black;
+   font-family: "Playpen Sans", cursive;
+   font-size: 14px;
+   font-weight: 400;
+   font-style: normal;
+   padding-top: 175px;
 }
-*/
-body{
-    background: black;
-        font-family: 'Dosis', sans-serif;
-}
-
 .postcard {
-background: white;
-width: 400px;
-height: 300px;
-margin: auto;
+   background: white;
+   width: 400px;
+   height: 300px;
+   margin: auto;
 }
-
 .postcard-header {
-    display: flex;
-    padding: 10px;
+   display: flex;
+   padding: 10px;
 }
-
 .postcard-header h1 {
-    width: 100px;
-    margin: 0;
-    padding-top: 5px;
+   width: 100%;
+   margin: 0;
+   padding-top: 4px;
 }
 
+
+.postcard-header img {
+   width: 50px;
+   height: 50px;
+}
+.postcard-body {
+   display: flex;
+}
 .body-left p:first-child {
-    margin-top: 0;
+   margin-top: 0;
 }
-.postcard-img {
-    width: 50px;
-    height: 50px;
+.body-left,
+.body-right {
+   padding: 10px;
 }
-
-• body-left,
-• body-right {
-padding: 10px;}
 input {
-border: none; 
-border-bottom: 1px grey solid;}
-
-.postcard-footer{
-    text-align: center;
+   border: none;
+   border-bottom: 1px grey solid;
+   font-family: "Playpen Sans", cursive;
+   font-size: 14px;
+   font-weight: 400;
+   font-style: normal;
 }
 
+
+.postcard-footer {
+   text-align: center;
+}
 button {
-    background-color: #b4b4b4;
-    padding: 5px 10px;
+   background-color: #b4b4b4;
+   padding: 5px 10px;
+   border: none;
+   font-family: "Playpen Sans", cursive;
+   font-size: 14px;
+   font-weight: 400;
+   font-style: normal;
 }
